# mdcal-rs

./: .gitignore  Cargo.toml  README.md  output.html
src/: calendar.rs  fetch.rs  html.rs  i18n.rs  main.rs  markdown.rs
