[package]
name = "mdcal"
version = "0.1.0"
edition = "2021"
description = "A CLI that downloads iCal feeds and renders calendar data as markdown"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ical = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
